tweaked results page

--- a/phylogenize_app/templates/results.html
+++ b/phylogenize_app/templates/results.html
@@ -77,7 +77,7 @@ $('head').append('<meta http-equiv="refresh" content="300"/>');
   {% if completed %}
       {{ infotitle("Job completed!") }}
   <ul>
-    <li><a href="{{ result_id }}/phylogenize-report.html">Report file
+    <li><a href="{{ result_id }}/index.html">Report file
     <li><a href="{{ result_id }}/output.tgz">Results (.tgz)
   </ul>
 
