--- a/phylogenize_app/templates/tutorial.html
+++ b/phylogenize_app/templates/tutorial.html
@@ -509,7 +509,7 @@
             locally:
             <ul>
                 <li>In R, calling functions from the R package directly;</li>
-                <li>In QIIME2, using the plugin <a href="https://bitbucket.org/pbradz/q2-phylogenize">q2-phylogenize</a></li>;
+                <li>In QIIME2, using the plugin <a href="https://bitbucket.org/pbradz/q2-phylogenize">q2-phylogenize</a>;</li>
                 <li>In the web browser, by running the web application locally.</li>
             </ul>
             For most people, the first two approaches are probably the easiest.
