made add.sig.descs more stable by using tidyverse syntax; fixed missing drop=FALSE in threshold.pos.sigs

--- a/phylogenize_app/templates/results.html
+++ b/phylogenize_app/templates/results.html
@@ -68,8 +68,9 @@ $('head').append('<meta http-equiv="refresh" content="300"/>');
     <li>You need this URL to access your results. An easy way to keep this URL
       is to bookmark it. (If you misplace the URL, you may also be able to find it in
       your browser history.)
-  <li>Jobs will be automatically deleted approximately 7 days after
-    finishing. Please download your results before then.
+        <li>Jobs will be automatically deleted approximately 7 days after
+            finishing. Please download your results before then.
+            <li>When running, your job may stay at 55&percnt; for a while: this is normal. You should see intermittent, more fine-grained progress if you expand the &quot;Monitor warnings/errors&quot; section below.
 </ul>
 
 
