fixed bug in sum.nonunique.burst

--- a/phylogenize_app/templates/results.html
+++ b/phylogenize_app/templates/results.html
@@ -70,7 +70,7 @@ $('head').append('<meta http-equiv="refresh" content="300"/>');
       your browser history.)
         <li>Jobs will be automatically deleted approximately 7 days after
             finishing. Please download your results before then.
-            <li>When running, your job may stay at 55&percnt; for a while: this is normal. You should see intermittent, more fine-grained progress if you expand the &quot;Monitor warnings/errors&quot; section below.
+            <li>When running, your job may stay at 55&percnt; for a while: this is normal, since this is the most time-consuming step. You should see intermittent, more fine-grained progress if you expand the &quot;Monitor warnings/errors&quot; section below.
 </ul>
 
 
