new manual, other changes

--- a/phylogenize_app/static/phylo.css
+++ b/phylogenize_app/static/phylo.css
@@ -1,5 +1,5 @@
 body {
-font-family: Barlow, Franklin Gothic, sans-serif;
+font-family: Lato, Corbel, sans-serif;
 font-weight: medium;
 font-size: 16px;
 }
