--- a/phylogenize_app/templates/about.html
+++ b/phylogenize_app/templates/about.html
@@ -50,15 +50,15 @@
 <section><p>
 <div class="container">
 
-	{{ infotitle("How to cite phylogenize") }} If you used <i>phylogenize</i> and found it helpful, please cite the web tool and/or the method as below:<p>
-	<blockquote><u>Tool:</u> Bradley PH and Pollard KS, "<i>phylogenize</i>: a web tool to identify microbial genes underlying environment associations." Submitted; preprint forthcoming.</blockquote>
-	<blockquote><u>Method:</u> Bradley PH, Nayfach S, and Pollard KS, "Phylogeny-corrected identification of microbial gene families relevant to human gut colonization." <i>PLOS Comput Biol</i> 14 (8), e1006242.</blockquote>
+	{{ infotitle("How to cite phylogenize: ") }} If you used <i>phylogenize</i> and found it helpful, please cite the web tool and/or the method as below:<p>
+	  <blockquote><u>Tool:</u> Bradley PH and Pollard KS, "<i>phylogenize</i>: correcting for phylogeny reveals genes associated with microbial distributions." <a href="https://www.biorxiv.org/content/10.1101/425231v2">Submitted</a>.</blockquote>
+	  <blockquote><u>Method:</u> Bradley PH, Nayfach S, and Pollard KS, "Phylogeny-corrected identification of microbial gene families relevant to human gut colonization." <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006242"><i>PLOS Comput Biol</i> 14 (8), e1006242.</a></blockquote>
 					<p>
 
-					{{ infotitle("How to contact support") }}
+					{{ infotitle("How to contact support: ") }}
 					If you are having problems using <i>phylogenize</i>, please contact <b><script>user1="support";user2="phylogenize";user3="org";user=user1+"&#64;"+user2+"."+user3;document.write(user);</script></b>.<p>
 
-					{{ infotitle("How to run phylogenize locally") }}
+					{{ infotitle("How to run phylogenize locally: ") }}
 					If you have very large data sets or need to do a lot of analyses, we recommend running <i>phylogenize</i> locally. You can download the source and instructions on running <i>phylogenize</i> locally from our git repository at <a href="http://bitbucket.org/pbradz/phylogenize">bitbucket.org/pbradz/phylogenize</a>.
 
 </div>
