--- a/phylogenize_app/templates/base.html
+++ b/phylogenize_app/templates/base.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
     <link rel="stylesheet" href={{ url_for('static', filename='css/bootstrap.css') }} />  
     <link rel="stylesheet" href={{ url_for('static', filename='phylo.css') }} />  
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon" />
@@ -22,8 +23,8 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	 <script src={{ url_for('static', filename='js/bootstrap.js') }}></script>
 
-	 <nav class="navbar navbar-expand-lg navbar-custom shadow-lg">
-		 <a class="navbar-brand" href="/">phylogenize (v0.91 beta)</a>
+	 <nav class="navbar navbar-expand-lg navbar-custom shadow-lg" style="font-family: Barlow;">
+		   <a class="navbar-brand" href="/">phylogenize (v0.92 beta)</a>
 		 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" aria-controls="bs-example-navbar-collapse-1" aria-label="Toggle navigation">
 			 <b><i>ϕ</i></b>
 		 </button>
