--- a/phylogenize_app/templates/tutorial.html
+++ b/phylogenize_app/templates/tutorial.html
@@ -588,7 +588,7 @@
         <p>A sample report generated on these data, containing the results for
             associating genes with specificity for the "Stool" environment, can
             be found <a href="{{ url_for('static',
-            filename='phylogenize-report-demo.html') }}">here</a>.</p>
+            filename='hmp-stool-phylo/index.html') }}">here</a>.</p>
 
         <h2 id="hmp">Earth Microbiome Project</h2>
 
@@ -598,7 +598,7 @@
             <em>phylogenize</em> to identify microbial genes associated with the
             plant rhizosphere. The full EMP data are very large, so we only
             provide the report file
-            <a href="{{ url_for('static', filename='emp-report-demo.html') }}">here</a>.</p>
+            <a href="{{ url_for('static', filename='plant-rhizosphere-phylo/index.html') }}">here</a>.</p>
 
         <h1 id="troubleshooting">Troubleshooting</h1>
 
