added news ticker

--- a/phylogenize_app/templates/index.html
+++ b/phylogenize_app/templates/index.html
@@ -57,7 +57,18 @@
   </div>
 </div>
 
-
+<section>
+<div class="row justify-content-md-center">
+	<div class="col-6">
+	<h4 style="background-color: #FFFFCC;">News</h4>
+		<ul>
+			<li>
+				7/2/2019: Fixed a bug with the web form that was causing an error when a BIOM file was submitted.
+			</li>
+		</ul>
+	</div>
+</div>
+</section>
 
 
 <section class="analyze-form">
