--- a/phylogenize_app/templates/index.html
+++ b/phylogenize_app/templates/index.html
@@ -61,7 +61,9 @@
 <div class="row justify-content-md-center">
 	<div class="col-6">
 	<h4 style="background-color: #FFFFCC;">News</h4>
-		<ul>
+	<ul>
+      <li>
+          7/10/2019: <i>phylogenize</i> will now warn the user when it is dropping samples from the analysis. This can happen either because those samples were singletons (at least two samples per environment are necessary), or because (in 16S data) nothing mapped to our database in that sample.
 			<li>
 				7/2/2019: Fixed a bug with the web form that was causing an error when a BIOM file was submitted.
 			</li>
