--- a/phylogenize_app/templates/tutorial.html
+++ b/phylogenize_app/templates/tutorial.html
@@ -567,7 +567,7 @@
             Reads corresponding to different samples from the same individual
             have been summed.) <b>Note</b>: this is a large dataset, so it may
             take a long time to run (on the order of an hour). We have also 
-						provided a <a href="{{ url_for('static', filename="hmp-16s-dada2-bacteroidetes.tab") }}"> reduced dataset </a> in tabular form with its own <a href="{{ url_for('static', "hmp-16s-metadata-bacteroidetes.tab") }}"> metadata </a> consisting of only the Bacteroidetes, 
+						provided a <a href="{{ url_for('static', filename="hmp-16s-dada2-bacteroidetes.tab") }}">reduced dataset</a> in tabular form with its own <a href="{{ url_for('static', filename="hmp-16s-metadata-bacteroidetes.tab") }}"> metadata </a> consisting of only the Bacteroidetes, 
 				    which should run faster, particularly when calculating specificity.</p>
 
         <p>You will have to provide an environment to calculate either
