added maintenance mode

--- a/phylogenize_app/templates/base.html
+++ b/phylogenize_app/templates/base.html
@@ -43,7 +43,7 @@
 
 			<footer class="footer">
 				<div class="container-fluid">
-					Bradley PH and Pollard KS (submitted). The <a href="http://docpollard.org">Pollard Lab</a> is at the <a href="https://gladstone.org/institutes/data-science-and-biotechnology">Gladstone Institute of Data Science and Biotechnology</a> (GIDB).
+					<a href="https://doi.org/10.1093/bioinformatics/btz722">Bradley PH and Pollard KS (2019), <i>Bioinformatics</i></a>. The <a href="http://docpollard.org">Pollard Lab</a> is at the <a href="https://gladstone.org/institutes/data-science-and-biotechnology">Gladstone Institute of Data Science and Biotechnology</a> (GIDB).
 				</div>
 			</footer>
 
